--- a/config.json
+++ b/config.json
@@ -35,10 +35,10 @@
         "DDLStream":{
             "domain":"co",
             "cookies" : {
-                "ips4_device_key": null,
-                "ips4_IPSSessionFront": null,
-                "ips4_member_id": null,
-                "ips4_login_key": null
+                "ips4_device_key": cf006ef3f48828a7af17ac35ff006114,
+                "ips4_IPSSessionFront": 312b6474dc02d3f0bdf6bc2a3b930856,
+                "ips4_member_id": 4030043,
+                "ips4_login_key": bbb0d4428a0e0ad491d3743f14ba87f6
                 },
             "enabled":"1"
         },
